# SnakeGameHaskell

./: .gitignore  .gitmodules  LICENSE  README.md  SnakeGameHaskell.cabal
lib/: GameEngine.hs
lib/GameEngine/: Scene.hs  Sprite.hs
lib/GameEngine/Sprite/: Colored.hs  Label.hs  Square.hs  Texture.hs
src/: GameScene.hs  Main.hs  ResultScene.hs  TitleScene.hs
src/Game/: Scene.hs  Sprite.hs  Utils.hs
