name:                SnakeGameHaskell
version:             0.1.0.0
description:         Please see README.md
category:            Game
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable SnakeGameHaskell
    hs-source-dirs:      src
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base >=4.8 && <4.9
                       , random >=1.1 && <1.2
                       , transformers >=0.4 && <0.5
                       , mtl >=2.2 && <2.3
                       , lens >=4.12 && <4.13
                       , GLFW-b >=1.4 && <1.5
                       , colors >=0.3 && <0.4
                       , game-engine
    default-language:    Haskell2010
